[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysb-pkpd"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
  "pysb>=1.15.0",
]
authors = [
  {name = "Blake A. Wilson", email = "blakeaw1102@gmail.com"},
]
description = "PySB add-on providing domain-specific macros and models for pharmacological PK/PD modeling."
readme = "README.md"
keywords = ["pysb", "biomodels", "reaction models", "systems biology", "pharmacokinetics", "pharmacodynamics", "pkpd", "qsp", "qst"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Bio-Modelers",
  "Topic :: Biological Modeling :: Model Building",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD 2-Clause",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/blakeaw/pysb-pkpd"
Issues = "https://github.com/blakeaw/pysb-pkpd/issues"
Changelog = "https://github.com/blakeaw/pysb-pkpd/blob/main/CHANGELOG.md"

# Find namespace package
[tool.setuptools.packages.find]
where = ["src"]
include = ["pysb.pkpd", "pysb.pkpd.models", "pysb.pkpd.pk_models"]
namespaces = true

# Set the dynamic version
[tool.setuptools.dynamic]
version = {attr = "pysb.pkpd.__version__"}