[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysb-pkpd"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
  "pysb>=1.15.0",
]
authors = [
  {name = "Blake A. Wilson", email = "blakeaw1102@gmail.com"},
]
description = "PySB add-on providing domain-specific macros and models for pharmacological PK/PD modeling."
readme = "README.md"
keywords = ["pysb", "biomodels", "reaction models", "systems biology", "pharmacokinetics", "pharmacodynamics", "pkpd", "qsp", "qst"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Intended Audience
  "Intended Audience :: Science/Research",

  # Topics
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD License",

  # Specify the Python versions you support here.
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "pytest>=8.3.4",
    "coverage>=7.6.10",
    "nose>=1.3.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=1.16.11",
    "pytkdocs[numpy-style]>=0.5.0",
]

test = [
    "pytest>=8.3.4",
    "coverage>=7.6.10",
    "nose>=1.3.7"
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=1.16.11",
    "pytkdocs[numpy-style]>=0.5.0",
]

[project.urls]
Repository = "https://github.com/blakeaw/pysb-pkpd"
Issues = "https://github.com/blakeaw/pysb-pkpd/issues"
Changelog = "https://github.com/blakeaw/pysb-pkpd/blob/main/CHANGELOG.md"

# Find namespace package
[tool.setuptools.packages.find]
where = ["src"]
include = ["pysb.pkpd", "pysb.pkpd.macros", "pysb.pkpd.models", "pysb.pkpd.pk_models"]
namespaces = true

# Set the dynamic version
[tool.setuptools.dynamic]
version = {attr = "pysb.pkpd.__version__"}